Fixed overflows scrollbars
- Navbar
- Table

--- a/src/scss/_table.scss
+++ b/src/scss/_table.scss
@@ -2,7 +2,7 @@
   @apply rounded;
 
   @screen md {
-    @apply overflow-x-scroll;
+    @apply overflow-x-auto;
     @apply shadow-md;
   }
 }
